update paths, run basic regression

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,17 +32,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'fuzzywuzzy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-715b0eda2914>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mfuzzywuzzy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfuzz\u001b[0m \u001b[0;31m# improve our match numbers so that we have more data to run regression on\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fuzzywuzzy'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "from fuzzywuzzy import fuzz # improve our match numbers so that we have more data to run regression on"
+    "# from fuzzywuzzy import fuzz # improve our match numbers so that we have more data to run regression on"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,28 +76,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n",
+      "/Users/horisustar/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n",
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:2: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n",
+      "/Users/horisustar/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n",
       "  \n"
      ]
     }
    ],
    "source": [
-    "million_songs = pd.DataFrame.from_csv('/Users/sumac/projects/metis/coursework/project_2/million_songs.csv',sep=',') #import csvs from other notebooks\n",
-    "top_100 = pd.DataFrame.from_csv('/Users/sumac/projects/metis/coursework/project_2/historical_top_100.csv',sep=',') # check our csv"
+    "million_songs = pd.DataFrame.from_csv('/Users/horisustar/projects/project2backup/million_songs.csv',sep=',') #import csvs from other notebooks\n",
+    "top_100 = pd.DataFrame.from_csv('/Users/horisustar/projects/project2backup/historical_top_100.csv',sep=',') # check our csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -166,7 +178,7 @@
        "4     Mark Dinning       5                   Teen Angel  1960"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +198,7 @@
        "Index(['artist_name', 'rating', 'title', 'year'], dtype='object')"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +225,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +259,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +280,7 @@
        "(838276, 12)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +300,7 @@
        "(5300, 4)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,34 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With clean column names and the features we want selected from the larger db, we can perform our merge, but we need to make sure we match weird song titles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# code from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
-    "\n",
-    "# List for dicts for easy dataframe creation \n",
-    "dict_list = []\n",
-    "# iterating over our players without salaries found above\n",
-    "for name in missing_salaries.player_name:\n",
-    "    # Use our method to find best match, we can set a threshold here\n",
-    "    match = match_name(name, df_salaries.player_name, 75)\n",
-    "    \n",
-    "    # New dict for storing data\n",
-    "    dict_ = {}\n",
-    "    dict_.update({\"player_name\" : name})\n",
-    "    dict_.update({\"match_name\" : match[0]})\n",
-    "    dict_.update({\"score\" : match[1]})\n",
-    "    dict_list.append(dict_)\n",
-    "    \n",
-    "merge_table = pd.DataFrame(dict_list)\n",
-    "# Display results\n",
-    "merge_table"
+    "### With clean column names and the features we want selected from the larger db, we can perform our merge, but we need to make sure we match weird song titles - TODO"
    ]
   },
   {
@@ -340,7 +325,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'missing_salaries' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-497fcff7a38e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdict_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# iterating over our players without salaries found above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmissing_salaries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer_name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Use our method to find best match, we can set a threshold here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatch_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_salaries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m75\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'missing_salaries' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# # code from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
+    "\n",
+    "# # List for dicts for easy dataframe creation \n",
+    "# dict_list = []\n",
+    "# # iterating over our players without salaries found above\n",
+    "# for name in missing_salaries.player_name:\n",
+    "#     # Use our method to find best match, we can set a threshold here\n",
+    "#     match = match_name(name, df_salaries.player_name, 75)\n",
+    "    \n",
+    "#     # New dict for storing data\n",
+    "#     dict_ = {}\n",
+    "#     dict_.update({\"player_name\" : name})\n",
+    "#     dict_.update({\"match_name\" : match[0]})\n",
+    "#     dict_.update({\"score\" : match[1]})\n",
+    "#     dict_list.append(dict_)\n",
+    "    \n",
+    "# merge_table = pd.DataFrame(dict_list)\n",
+    "# # Display results\n",
+    "# merge_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +398,7 @@
        "(1450, 14)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -861,12 +892,12 @@
     }
    ],
    "source": [
-    "ranked_songs.head(20) # looks like we have duplicates - let's take the last, assuming it has the most accurate measures "
+    "ranked_songs.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,25 +906,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n",
+      "/Users/horisustar/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: from_csv is deprecated. Please use read_csv(...) instead. Note that some of the default arguments are different, so please refer to the documentation for from_csv when changing your function calls\n",
       "  \"\"\"Entry point for launching an IPython kernel.\n"
      ]
     }
    ],
    "source": [
-    "csv_check = pd.DataFrame.from_csv('/Users/sumac/projects/metis/coursework/project_2/final_ranked_song_db.csv',sep=',') # check our csv"
+    "csv_check = pd.DataFrame.from_csv('/Users/horisustar/projects/project2backup/final_ranked_song_db.csv',sep=',') # check our csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
