--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -32,21 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'fuzzywuzzy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-715b0eda2914>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mfuzzywuzzy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfuzz\u001b[0m \u001b[0;31m# improve our match numbers so that we have more data to run regression on\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'fuzzywuzzy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "# from fuzzywuzzy import fuzz # improve our match numbers so that we have more data to run regression on"
@@ -58,20 +46,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def match_name(name, list_names, min_score=0): # code from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
-    "    # -1 score incase we don't get any matches\n",
-    "    max_score = -1\n",
-    "    # Returning empty name for no match as well\n",
-    "    max_name = \"\"\n",
-    "    # Iternating over all names in the other\n",
-    "    for name2 in list_names:\n",
-    "        #Finding fuzzy match score\n",
-    "        score = fuzz.ratio(name, name2)\n",
-    "        # Checking if we are above our threshold and have a better score\n",
-    "        if (score > min_score) & (score > max_score):\n",
-    "            max_name = name2\n",
-    "            max_score = score\n",
-    "    return (max_name, max_score)"
+    "# def match_name(name, list_names, min_score=0): # code from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
+    "#     # -1 score incase we don't get any matches\n",
+    "#     max_score = -1\n",
+    "#     # Returning empty name for no match as well\n",
+    "#     max_name = \"\"\n",
+    "#     # Iternating over all names in the other\n",
+    "#     for name2 in list_names:\n",
+    "#         #Finding fuzzy match score\n",
+    "#         score = fuzz.ratio(name, name2)\n",
+    "#         # Checking if we are above our threshold and have a better score\n",
+    "#         if (score > min_score) & (score > max_score):\n",
+    "#             max_name = name2\n",
+    "#             max_score = score\n",
+    "#     return (max_name, max_score)"
    ]
   },
   {
@@ -318,28 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'missing_salaries' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-497fcff7a38e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdict_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# iterating over our players without salaries found above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmissing_salaries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer_name\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Use our method to find best match, we can set a threshold here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmatch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmatch_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_salaries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m75\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'missing_salaries' is not defined"
-     ]
-    }
-   ],
    "source": [
     "# # code from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
     "\n",
@@ -361,13 +330,6 @@
     "# # Display results\n",
     "# merge_table"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
