--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -32,6 +32,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#todo clean superlatives (longest outliers, replace 0's in columns that contain mostly 0's with NaN), other."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -253,8 +262,18 @@
     }
    ],
    "source": [
-    "million_songs.drop(drop_list,axis=1,inplace=True) # drop the year col so we can match on artist name and title only, without duplicate year cols\n",
-    "million_songs.columns # these are the columns we are left with"
+    "million_songs.drop(drop_list,axis=1,inplace=True) # drop the year col so we can match on artist name and title only \n",
+    "                                                  # without duplicate year cols\n",
+    "million_songs.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "million_songs = million_songs[million_songs.Song != 0]"
    ]
   },
   {
@@ -310,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # code from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
+    "# # code reference from https://medium.com/@rtjeannier/combining-data-sets-with-fuzzy-matching-17efcb510ab2\n",
     "\n",
     "# # List for dicts for easy dataframe creation \n",
     "# dict_list = []\n",
