--- a/find_superlatives_eda.ipynb
+++ b/find_superlatives_eda.ipynb
@@ -18,6 +18,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +55,7 @@
        "Index(['artist_name', 'rating', 'title', 'year'], dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +93,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,49 +104,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "artist_name                                              Vangelis\n",
-       "rating                                                         12\n",
-       "title                                            Chariots Of Fire\n",
-       "year_x                                                       1982\n",
-       "track_id                                       TRYIZAM128E0793DB3\n",
-       "song_id                                        SOUSFNE12A6701F843\n",
-       "release                                          Chariots Of Fire\n",
-       "artist_id                                      ARMPRI31187FB4F7D9\n",
-       "artist_mbid                  57fca0e2-f9ad-4ae6-af9d-6a6f50cbcd5f\n",
-       "duration                                                  1241.31\n",
-       "artist_familiarity                                       0.772872\n",
-       "artist_hotttnesss                                         0.49584\n",
-       "year_y                                                       1981\n",
+       "artist_name                                          Taylor Dayne\n",
+       "rating                                                         53\n",
+       "title                                         Tell It To My Heart\n",
+       "year_x                                                       1988\n",
+       "track_id                                       TRWLKNU128F930778F\n",
+       "song_id                                        SOMEJWG12AB017B7E5\n",
+       "release                                                      LOVE\n",
+       "artist_id                                      ARCJMMQ1187B98D1FD\n",
+       "artist_mbid                  c0cd3de7-4654-482b-913b-6fd7dc4ce9a4\n",
+       "duration                                                  219.245\n",
+       "artist_familiarity                                        0.64453\n",
+       "artist_hotttnesss                                         0.44024\n",
+       "year_y                                                       1988\n",
        "danceability                                                    0\n",
        "energy                                                          0\n",
-       "key                                                             2\n",
-       "key_confidence                                              0.838\n",
-       "loudness                                                  -20.427\n",
-       "mode                                                            1\n",
-       "mode_confidence                                             0.783\n",
-       "song_hotttnesss                                          0.785655\n",
-       "tempo                                                     182.707\n",
-       "time_signature                                                  4\n",
-       "time_signature_confidence                                   0.861\n",
-       "track_7digitalid                                           170319\n",
+       "key                                                             5\n",
+       "key_confidence                                              0.479\n",
+       "loudness                                                   -6.088\n",
+       "mode                                                            0\n",
+       "mode_confidence                                               0.5\n",
+       "song_hotttnesss                                                -1\n",
+       "tempo                                                     235.705\n",
+       "time_signature                                                  7\n",
+       "time_signature_confidence                                   0.744\n",
+       "track_7digitalid                                          4456299\n",
        "shs_perf                                                       -1\n",
        "shs_work                                                        0\n",
-       "Name: 590, dtype: object"
+       "Name: 814, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df['duration'].idxmax()]"
+    "df.loc[df['tempo'].idxmax()]"
    ]
   },
   {
